--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "build": "vite build"
   },
   "dependencies": {
+    "nanoid": "^3.1.12",
     "vue": "^3.0.0-rc.1"
   },
   "devDependencies": {
+    "@types/nanoid": "^2.1.0",
     "@typescript-eslint/eslint-plugin": "^3.9.0",
     "@typescript-eslint/parser": "^3.9.0",
     "@vue/compiler-sfc": "^3.0.0-rc.1",
