--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "eslint": "^7.6.0",
     "eslint-plugin-vue": "^7.0.0-beta.2",
     "sass": "^1.26.10",
+    "stylelint": "^13.6.1",
+    "stylelint-config-standard": "^20.0.0",
     "typescript": "^3.9.7",
     "vite": "^1.0.0-rc.1"
   }
