--- a/package.json
+++ b/package.json
@@ -1,26 +1,41 @@
 {
-  "name": "float-menu",
-  "version": "0.0.0",
+  "name": "vue-float-menu",
+  "version": "1.0.12",
+  "description": "smart floating menu for Vue 3",
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "npm": "rimraf ./dist && rollup -c"
   },
   "dependencies": {
     "nanoid": "^3.1.12",
     "vue": "^3.0.0-rc.9"
   },
   "devDependencies": {
+    "@rollup/plugin-beep": "^0.2.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
+    "@rollup/plugin-sucrase": "^3.1.0",
+    "@rollup/plugin-typescript": "^5.0.2",
     "@types/nanoid": "^2.1.0",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
     "@vue/compiler-sfc": "^3.0.0-rc.9",
     "eslint": "^7.7.0",
     "eslint-plugin-vue": "^7.0.0-beta.2",
+    "rollup": "^2.26.6",
+    "rollup-plugin-buble": "^0.19.8",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-scss": "^2.6.0",
+    "rollup-plugin-vue": "^6.0.0-beta.8",
     "sass": "^1.26.10",
-    "sass-loader": "^10.0.1",
     "stylelint": "^13.6.1",
     "stylelint-config-standard": "^20.0.0",
     "typescript": "^4.0.2",
     "vite": "^1.0.0-rc.4"
-  }
+  },
+  "main": "dist/vue-float-menu.js",
+  "module": "dist/vue-float-menu.es.js",
+  "umd": "dist/vue-float-menu.umd.js",
+  "files": ["dist"]
 }
