--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "@typescript-eslint/parser": "^3.10.1",
     "@vue/compiler-sfc": "^3.0.0-rc.9",
     "eslint": "^7.7.0",
-    "eslint-plugin-vue": "^7.0.0-beta.2",
-    "rollup": "^2.26.6",
+    "eslint-plugin-vue": "^6.2.2",
+    "rollup": "^2.26.8",
     "rollup-plugin-buble": "^0.19.8",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-scss": "^2.6.0",
-    "rollup-plugin-vue": "^6.0.0-beta.8",
+    "rollup-plugin-vue": "^6.0.0-beta.10",
     "sass": "^1.26.10",
     "stylelint": "^13.6.1",
     "stylelint-config-standard": "^20.0.0",
