--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,3 +19,11 @@ steps:
     npm install
     npm run build
   displayName: 'npm install and build'
+
+- script: |
+    npm run rollup
+  displayName: 'Rollup build'
+
+- script: |
+    npm run lint
+  displayName: 'style lint' 
