--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
     "typescript": "^4.0.2",
     "vite": "^1.0.0-rc.4"
   },
+  "peerDependencies": {
+    "nanoid": "^3.1.12",
+    "vue": "^3.0.0"
+  },
   "main": "dist/vue-float-menu.js",
   "module": "dist/vue-float-menu.es.js",
   "umd": "dist/vue-float-menu.umd.js",
