--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   },
   "dependencies": {
     "nanoid": "^3.1.12",
-    "vue": "^3.0.0"
+    "vue": "^3.0.0",
+    "vue-float-menu": "^1.1.10"
   },
   "devDependencies": {
     "@rollup/plugin-beep": "^0.2.0",
