--- a/package.json
+++ b/package.json
@@ -21,7 +21,14 @@
     "dev": "vite",
     "build": "vite build",
     "rollup": "rimraf ./dist && rollup -c",
+    "lint": "eslint src/**/*.vue",
     "lint:css": "stylelint src/**/*.vue"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint:css",
+      "pre-push": "yarn lint"
+    }
   },
   "dependencies": {
     "nanoid": "^3.1.12",
@@ -39,6 +46,7 @@
     "@vue/compiler-sfc": "^3.0.0",
     "eslint": "^7.10.0",
     "eslint-plugin-vue": "^7.0.0-beta.4",
+    "husky": "^4.3.0",
     "rollup": "^2.28.1",
     "rollup-plugin-buble": "^0.19.8",
     "rollup-plugin-commonjs": "^10.1.0",
