Set up CI with Azure Pipelines
[skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,5 +25,9 @@ steps:
   displayName: 'Rollup build'
 
 - script: |
+    npm run lint:css
+  displayName: 'lint styles' 
+
+- script: |
     npm run lint
-  displayName: 'style lint' 
+  displayName: 'lint typescript' 
