--- a/package.json
+++ b/package.json
@@ -22,13 +22,16 @@
     "build": "vite build",
     "rollup": "rimraf ./dist && rollup -c",
     "lint": "eslint src/**/*.vue",
-    "lint:css": "stylelint src/**/*.vue"
+    "lint:css": "stylelint src/**/*.scss"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn lint:css",
-      "pre-push": "yarn lint"
+      "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+    "src/**/*.scss": ["stylelint src/**/*.scss", "git add"],
+    "src/**/*.vue": ["eslint src/**/*.vue", "git add"]
   },
   "dependencies": {
     "nanoid": "^3.1.12",
@@ -47,6 +50,7 @@
     "eslint": "^7.10.0",
     "eslint-plugin-vue": "^7.0.0-beta.4",
     "husky": "^4.3.0",
+    "lint-staged": "^10.4.0",
     "rollup": "^2.28.1",
     "rollup-plugin-buble": "^0.19.8",
     "rollup-plugin-commonjs": "^10.1.0",
