--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-float-menu",
-  "version": "1.1.11",
+  "version": "1.2.0",
   "description": "smart floating menu for Vue 3",
   "license": "MIT",
   "keywords": [
@@ -30,8 +30,14 @@
     }
   },
   "lint-staged": {
-    "src/**/*.scss": ["stylelint src/**/*.scss", "git add"],
-    "src/**/*.vue": ["eslint src/**/*.vue", "git add"]
+    "src/**/*.scss": [
+      "stylelint src/**/*.scss",
+      "git add"
+    ],
+    "src/**/*.vue": [
+      "eslint src/**/*.vue",
+      "git add"
+    ]
   },
   "dependencies": {
     "nanoid": "^3.1.12",
