--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "rollup": "^2.28.1",
     "rollup-plugin-buble": "^0.19.8",
     "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-postcss": "^3.1.8",
     "rollup-plugin-scss": "^2.6.0",
     "rollup-plugin-vue": "^6.0.0-beta.10",
     "sass": "^1.26.11",
