--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
     ]
   },
   "dependencies": {
+    "interactjs": "^1.10.0",
     "nanoid": "^3.1.12",
     "vue": "^3.0.0",
     "vue-float-menu": "^1.1.10"
   },
   "devDependencies": {
+    "@interactjs/types": "^1.10.0",
     "@rollup/plugin-beep": "^0.2.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-sucrase": "^3.1.0",
@@ -70,6 +72,7 @@
     "vite": "^1.0.0-rc.4"
   },
   "peerDependencies": {
+    "interactjs": "^1.10.0",
     "nanoid": "^3.1.12",
     "vue": "^3.0.0"
   },
