--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "interactjs": "^1.10.0",
     "nanoid": "^3.1.12",
     "vue": "^3.0.0",
-    "vue-float-menu": "^1.1.10"
+    "vue-float-menu": "^1.6.0"
   },
   "devDependencies": {
     "@interactjs/types": "^1.10.0",
@@ -52,18 +52,18 @@
     "@rollup/plugin-sucrase": "^3.1.0",
     "@rollup/plugin-typescript": "^6.0.0",
     "@types/nanoid": "^2.1.0",
-    "@typescript-eslint/eslint-plugin": "^4.3.0",
-    "@typescript-eslint/parser": "^4.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.4.0",
+    "@typescript-eslint/parser": "^4.4.0",
     "@vue/compiler-sfc": "^3.0.0",
     "eslint": "^7.10.0",
-    "eslint-plugin-vue": "^7.0.0-beta.4",
+    "eslint-plugin-vue": "^7.0.1",
     "husky": "^4.3.0",
     "lint-staged": "^10.4.0",
     "rollup": "^2.28.1",
     "rollup-plugin-buble": "^0.19.8",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-postcss": "^3.1.8",
-    "rollup-plugin-scss": "^2.6.0",
+    "rollup-plugin-scss": "^2.6.1",
     "rollup-plugin-vue": "^6.0.0-beta.10",
     "sass": "^1.26.11",
     "stylelint": "^13.7.2",
