--- a/package.json
+++ b/package.json
@@ -48,28 +48,29 @@
   "devDependencies": {
     "@interactjs/types": "^1.10.0",
     "@rollup/plugin-beep": "^0.2.0",
-    "@rollup/plugin-node-resolve": "^9.0.0",
+    "@rollup/plugin-node-resolve": "^10.0.0",
     "@rollup/plugin-sucrase": "^3.1.0",
-    "@rollup/plugin-typescript": "^6.0.0",
+    "@rollup/plugin-typescript": "^6.1.0",
     "@types/nanoid": "^2.1.0",
-    "@typescript-eslint/eslint-plugin": "^4.5.0",
-    "@typescript-eslint/parser": "^4.5.0",
+    "@typescript-eslint/eslint-plugin": "^4.7.0",
+    "@typescript-eslint/parser": "^4.7.0",
     "@vue/compiler-sfc": "^3.0.2",
-    "eslint": "^7.11.0",
+    "eslint": "^7.13.0",
     "eslint-plugin-vue": "^7.1.0",
     "husky": "^4.3.0",
-    "lint-staged": "^10.4.2",
-    "rollup": "^2.32.1",
+    "lint-staged": "^10.5.1",
+    "rollup": "^2.33.1",
     "rollup-plugin-buble": "^0.19.8",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-postcss": "^3.1.8",
     "rollup-plugin-scss": "^2.6.1",
-    "rollup-plugin-vue": "^6.0.0-beta.10",
-    "sass": "^1.27.0",
+    "rollup-plugin-vue": "^6.0.0-beta.11",
+    "sass": "^1.29.0",
     "stylelint": "^13.7.2",
     "stylelint-config-standard": "^20.0.0",
-    "typescript": "^4.0.3",
-    "vite": "^1.0.0-rc.4"
+    "tslib": "^2.0.3",
+    "typescript": "^4.0.5",
+    "vite": "^1.0.0-rc.9"
   },
   "peerDependencies": {
     "interactjs": "^1.10.0",
