--- a/package.json
+++ b/package.json
@@ -31,19 +31,17 @@
   },
   "lint-staged": {
     "src/**/*.scss": [
-      "stylelint src/**/*.scss",
+      "npx stylelint src/**/*.scss --fix",
       "git add"
     ],
     "src/**/*.vue": [
-      "eslint src/**/*.vue",
+      "eslint src/**/*.vue --fix",
       "git add"
     ]
   },
   "dependencies": {
-    "interactjs": "^1.10.0",
-    "nanoid": "^3.1.12",
-    "vue": "^3.0.2",
-    "vue-float-menu": "^1.6.0"
+    "focus-visible": "^5.2.0",
+    "interactjs": "^1.10.0"
   },
   "devDependencies": {
     "@interactjs/types": "^1.10.0",
@@ -51,15 +49,14 @@
     "@rollup/plugin-node-resolve": "^10.0.0",
     "@rollup/plugin-sucrase": "^3.1.0",
     "@rollup/plugin-typescript": "^6.1.0",
-    "@types/nanoid": "^2.1.0",
-    "@typescript-eslint/eslint-plugin": "^4.7.0",
-    "@typescript-eslint/parser": "^4.7.0",
+    "@typescript-eslint/eslint-plugin": "^4.8.0",
+    "@typescript-eslint/parser": "^4.8.0",
     "@vue/compiler-sfc": "^3.0.2",
     "eslint": "^7.13.0",
     "eslint-plugin-vue": "^7.1.0",
     "husky": "^4.3.0",
     "lint-staged": "^10.5.1",
-    "rollup": "^2.33.1",
+    "rollup": "^2.33.2",
     "rollup-plugin-buble": "^0.19.8",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-postcss": "^3.1.8",
@@ -70,11 +67,11 @@
     "stylelint-config-standard": "^20.0.0",
     "tslib": "^2.0.3",
     "typescript": "^4.0.5",
-    "vite": "^1.0.0-rc.9"
+    "vite": "^1.0.0-rc.9",
+    "vue": "^3.0.2",
+    "vue-float-menu": "^1.6.1"
   },
   "peerDependencies": {
-    "interactjs": "^1.10.0",
-    "nanoid": "^3.1.12",
     "vue": "^3.0.0"
   },
   "main": "dist/vue-float-menu.js",
