--- a/package.json
+++ b/package.json
@@ -49,27 +49,28 @@
     "@rollup/plugin-node-resolve": "^10.0.0",
     "@rollup/plugin-sucrase": "^3.1.0",
     "@rollup/plugin-typescript": "^6.1.0",
-    "@typescript-eslint/eslint-plugin": "^4.8.0",
-    "@typescript-eslint/parser": "^4.8.0",
+    "@typescript-eslint/eslint-plugin": "^4.8.1",
+    "@typescript-eslint/parser": "^4.8.1",
     "@vue/compiler-sfc": "^3.0.2",
     "eslint": "^7.13.0",
     "eslint-plugin-vue": "^7.1.0",
     "husky": "^4.3.0",
     "lint-staged": "^10.5.1",
-    "rollup": "^2.33.2",
+    "rollup": "^2.33.3",
     "rollup-plugin-buble": "^0.19.8",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-postcss": "^3.1.8",
     "rollup-plugin-scss": "^2.6.1",
+    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-vue": "^6.0.0-beta.11",
     "sass": "^1.29.0",
-    "stylelint": "^13.7.2",
+    "stylelint": "^13.8.0",
     "stylelint-config-standard": "^20.0.0",
     "tslib": "^2.0.3",
     "typescript": "^4.0.5",
     "vite": "^1.0.0-rc.9",
     "vue": "^3.0.2",
-    "vue-float-menu": "^1.6.1"
+    "vue-float-menu": "^1.7.1"
   },
   "peerDependencies": {
     "vue": "^3.0.0"
