--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,2 @@
 ko_fi: prabhuignoto
-custom: paypal.me/prabhuignoto
-custom: https://www.buymeacoffee.com/prabhuignoto
+custom: [paypal.me/prabhuignoto, https://www.buymeacoffee.com/prabhuignoto]
