--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,2 @@
 ko_fi: prabhuignoto
-custom: [paypal.me/prabhuignoto, https://www.buymeacoffee.com/prabhuignoto]
+custom: ["paypal.me/prabhuignoto", "https://www.buymeacoffee.com/prabhuignoto"]
