--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "@rollup/plugin-typescript": "^6.1.0",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
     "@typescript-eslint/parser": "^4.8.2",
-    "@vue/compiler-sfc": "^3.0.2",
+    "@vue/compiler-sfc": "^3.0.3",
     "eslint": "^7.14.0",
     "eslint-plugin-vue": "^7.1.0",
     "husky": "^4.3.0",
@@ -61,19 +61,17 @@
     "rollup-plugin-postcss": "^3.1.8",
     "rollup-plugin-scss": "^2.6.1",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-vue": "^6.0.0-beta.11",
+    "rollup-plugin-vue": "^6.0.0",
     "sass": "^1.29.0",
     "stylelint": "^13.8.0",
     "stylelint-config-standard": "^20.0.0",
     "tslib": "^2.0.3",
     "typescript": "^4.1.2",
-    "vite": "^1.0.0-rc.9",
-    "vue": "^3.0.2",
+    "vite": "^1.0.0-rc.13",
+    "vue": "^3.0.3",
     "vue-float-menu": "^1.7.6"
   },
-  "peerDependencies": {
-    "vue": "^3.0.0"
-  },
+  "peerDependencies": {},
   "main": "dist/vue-float-menu.js",
   "module": "dist/vue-float-menu.es.js",
   "umd": "dist/vue-float-menu.umd.js",
