--- a/package.json
+++ b/package.json
@@ -1,81 +1,7 @@
 {
-  "name": "vue-float-menu",
-  "version": "1.8.1",
-  "description": "smart floating menu for Vue 3",
-  "license": "MIT",
-  "keywords": [
-    "menu",
-    "float-menu",
-    "vue-menu"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/prabhuignoto/vue-float-menu"
-  },
-  "author": {
-    "name": "Prabhu Murthy",
-    "url": "https://www.prabhumurthy.com",
-    "email": "prabhu.m.murthy@gmail.com"
-  },
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "rollup": "rimraf ./dist && rollup -c",
-    "lint": "eslint src/**/*.vue",
-    "lint:css": "stylelint src/**/*.scss",
-    "lint:all": "yarn lint && yarn lint:css"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "src/**/*.scss": [
-      "npx stylelint src/**/*.scss --fix",
-      "git add"
-    ],
-    "src/**/*.vue": [
-      "eslint src/**/*.vue --fix",
-      "git add"
-    ]
-  },
-  "dependencies": {
-    "focus-visible": "^5.2.0"
-  },
+  "name": "root",
+  "private": true,
   "devDependencies": {
-    "@rollup/plugin-beep": "^0.2.0",
-    "@rollup/plugin-node-resolve": "^10.0.0",
-    "@rollup/plugin-sucrase": "^3.1.0",
-    "@rollup/plugin-typescript": "^6.1.0",
-    "@typescript-eslint/eslint-plugin": "^4.8.2",
-    "@typescript-eslint/parser": "^4.8.2",
-    "@vue/compiler-sfc": "^3.0.3",
-    "eslint": "^7.14.0",
-    "eslint-plugin-vue": "^7.1.0",
-    "husky": "^4.3.0",
-    "lint-staged": "^10.5.2",
-    "rollup": "^2.33.3",
-    "rollup-plugin-buble": "^0.19.8",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-postcss": "^3.1.8",
-    "rollup-plugin-scss": "^2.6.1",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-vue": "^6.0.0",
-    "sass": "^1.29.0",
-    "stylelint": "^13.8.0",
-    "stylelint-config-standard": "^20.0.0",
-    "tslib": "^2.0.3",
-    "typescript": "^4.1.2",
-    "vite": "^1.0.0-rc.13",
-    "vue": "^3.0.3",
-    "vue-float-menu": "^1.7.6"
-  },
-  "peerDependencies": {},
-  "main": "dist/vue-float-menu.js",
-  "module": "dist/vue-float-menu.es.js",
-  "umd": "dist/vue-float-menu.umd.js",
-  "files": [
-    "dist"
-  ]
+    "lerna": "^3.22.1"
+  }
 }
