memoize  drag handle position

--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -6,6 +6,9 @@ enabled = true
 
   [analyzers.meta]
   environment = ["browser"]
-  plugins = ["react"]
+  plugins = [
+    "vue",
+    "react"
+  ]
   style_guide = "standard"
   dialect = "typescript"
