--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "@rollup/plugin-node-resolve": "^10.0.0",
     "@rollup/plugin-sucrase": "^3.1.0",
     "@rollup/plugin-typescript": "^8.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.8.2",
-    "@typescript-eslint/parser": "^4.8.2",
+    "@typescript-eslint/eslint-plugin": "^4.9.1",
+    "@typescript-eslint/parser": "^4.9.1",
     "@vue/compiler-sfc": "^3.0.4",
     "eslint": "^7.15.0",
     "eslint-plugin-vue": "^7.1.0",
@@ -66,12 +66,15 @@
     "stylelint": "^13.8.0",
     "stylelint-config-standard": "^20.0.0",
     "tslib": "^2.0.3",
-    "typescript": "^4.1.2",
+    "typescript": "^4.1.3",
     "vite": "^1.0.0-rc.13",
     "vue": "^3.0.4",
     "vue-float-menu": "^1.8.2"
   },
-  "peerDependencies": {},
+  "peerDependencies": {
+    "@vue/compiler-sfc": "^3.0.4",
+    "vue": "^3.0.4"
+  },
   "main": "dist/vue-float-menu.js",
   "module": "dist/vue-float-menu.es.js",
   "umd": "dist/vue-float-menu.umd.js",
