--- a/package.json
+++ b/package.json
@@ -48,14 +48,15 @@
     "@rollup/plugin-node-resolve": "^11.0.1",
     "@rollup/plugin-sucrase": "^3.1.0",
     "@rollup/plugin-typescript": "^8.1.0",
-    "@typescript-eslint/eslint-plugin": "^4.10.0",
-    "@typescript-eslint/parser": "^4.10.0",
+    "@typescript-eslint/eslint-plugin": "^4.12.0",
+    "@typescript-eslint/parser": "^4.12.0",
+    "@vitejs/plugin-vue": "^1.0.4",
     "@vue/compiler-sfc": "^3.0.5",
     "eslint": "^7.17.0",
-    "eslint-plugin-vue": "^7.4.0",
+    "eslint-plugin-vue": "^7.4.1",
     "husky": "^4.3.6",
     "lint-staged": "^10.5.2",
-    "rollup": "^2.35.1",
+    "rollup": "^2.36.0",
     "rollup-plugin-buble": "^0.19.8",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-postcss": "^4.0.0",
@@ -65,9 +66,9 @@
     "sass": "^1.32.0",
     "stylelint": "^13.8.0",
     "stylelint-config-standard": "^20.0.0",
-    "tslib": "^2.0.3",
+    "tslib": "^2.1.0",
     "typescript": "^4.1.3",
-    "vite": "^1.0.0-rc.13",
+    "vite": "^2.0.0-beta.9",
     "vue": "^3.0.5",
     "vue-float-menu": "^1.9.0"
   },
