--- a/package.json
+++ b/package.json
@@ -50,12 +50,13 @@
     "@rollup/plugin-typescript": "^8.1.0",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
     "@typescript-eslint/parser": "^4.12.0",
-    "@vitejs/plugin-vue": "^1.0.4",
+    "@vitejs/plugin-vue": "^1.0.5",
     "@vue/compiler-sfc": "^3.0.5",
     "eslint": "^7.17.0",
     "eslint-plugin-vue": "^7.4.1",
     "husky": "^4.3.7",
     "lint-staged": "^10.5.2",
+    "postcss": "^8.2.4",
     "rollup": "^2.36.1",
     "rollup-plugin-buble": "^0.19.8",
     "rollup-plugin-commonjs": "^10.1.0",
@@ -68,7 +69,7 @@
     "stylelint-config-standard": "^20.0.0",
     "tslib": "^2.1.0",
     "typescript": "^4.1.3",
-    "vite": "^2.0.0-beta.15",
+    "vite": "^2.0.0-beta.21",
     "vue": "^3.0.5",
     "vue-float-menu": "^1.9.0"
   },
