--- a/package.json
+++ b/package.json
@@ -45,11 +45,11 @@
   },
   "devDependencies": {
     "@rollup/plugin-beep": "^0.2.0",
-    "@rollup/plugin-node-resolve": "^11.1.1",
+    "@rollup/plugin-node-resolve": "^11.2.0",
     "@rollup/plugin-sucrase": "^3.1.0",
     "@rollup/plugin-typescript": "^8.2.0",
-    "@typescript-eslint/eslint-plugin": "^4.15.0",
-    "@typescript-eslint/parser": "^4.15.0",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "@typescript-eslint/parser": "^4.15.1",
     "@vitejs/plugin-vue": "^1.1.4",
     "@vue/compiler-sfc": "^3.0.5",
     "eslint": "^7.20.0",
@@ -64,12 +64,12 @@
     "rollup-plugin-scss": "^2.6.1",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-vue": "^6.0.0",
-    "sass": "^1.32.7",
+    "sass": "^1.32.8",
     "stylelint": "^13.10.0",
     "stylelint-config-standard": "^20.0.0",
     "tslib": "^2.1.0",
     "typescript": "^4.1.5",
-    "vite": "^2.0.0-beta.69",
+    "vite": "^2.0.1",
     "vue": "^3.0.5",
     "vue-float-menu": "^1.9.0"
   },
