--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build": "vite build",
     "rollup": "rimraf ./dist && rollup -c",
     "lint": "eslint src/**/*.vue",
-    "lint:css": "stylelint src/**/*.scss",
+    "lint:css": "stylelint src/**/*.scss --custom-syntax postcss-scss",
     "lint:all": "yarn lint && yarn lint:css",
     "prepare": "husky install"
   },
@@ -46,32 +46,34 @@
   },
   "devDependencies": {
     "@rollup/plugin-beep": "^0.2.0",
-    "@rollup/plugin-node-resolve": "^13.0.5",
+    "@rollup/plugin-node-resolve": "^13.0.6",
     "@rollup/plugin-sucrase": "^4.0.1",
-    "@rollup/plugin-typescript": "^8.2.5",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "@vitejs/plugin-vue": "^1.9.3",
-    "@vue/compiler-sfc": "^3.2.19",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^7.19.1",
-    "husky": "^7.0.2",
-    "lint-staged": "^11.2.0",
-    "postcss": "^8.3.9",
-    "rollup": "^2.58.0",
+    "@rollup/plugin-typescript": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
+    "@vitejs/plugin-vue": "^1.9.4",
+    "@vue/compiler-sfc": "^3.2.21",
+    "eslint": "^8.1.0",
+    "eslint-plugin-vue": "^8.0.3",
+    "husky": "^7.0.4",
+    "lint-staged": "^11.2.6",
+    "postcss": "^8.3.11",
+    "postcss-html": "^1.2.0",
+    "postcss-scss": "^4.0.2",
+    "rollup": "^2.59.0",
     "rollup-plugin-buble": "^0.19.8",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-postcss": "^4.0.1",
     "rollup-plugin-scss": "^3.0.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-vue": "^6.0.0",
-    "sass": "^1.42.1",
-    "stylelint": "^13.13.1",
-    "stylelint-config-standard": "^22.0.0",
+    "sass": "^1.43.4",
+    "stylelint": "^14.0.1",
+    "stylelint-config-standard": "^23.0.0",
     "tslib": "^2.3.1",
-    "typescript": "^4.4.3",
-    "vite": "^2.6.5",
-    "vue": "^3.2.19",
+    "typescript": "^4.4.4",
+    "vite": "^2.6.13",
+    "vue": "^3.2.21",
     "vue-float-menu": "^1.9.0"
   },
   "peerDependencies": {
