--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,3 +1,14 @@
 {
-  "extends": "stylelint-config-standard"
+  "extends": [
+    "stylelint-config-standard",
+    "stylelint-config-prettier"
+  ],
+  "plugins": [
+    "stylelint-scss"
+  ],
+  "rules": {
+    "at-rule-no-unknown": null,
+    "scss/at-rule-no-unknown": true,
+    "selector-class-pattern": "^[a-z0-9\\_-]+$"
+  }
 }
