--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,4 @@
-module.exports = {
+{
     "env": {
         "browser": true,
         "es2021": true
@@ -16,6 +16,5 @@ module.exports = {
         "vue",
         "@typescript-eslint"
     ],
-    "rules": {
-    }
-};
+    "rules": {}
+}
