--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.9.1",
   "description": "smart floating menu for Vue 3",
   "license": "MIT",
+  "type": "module",
   "keywords": [
     "menu",
     "float-menu",
@@ -24,7 +25,8 @@
     "lint": "eslint src/**/*.vue",
     "lint:css": "stylelint src/**/*.scss --custom-syntax postcss-scss",
     "lint:all": "yarn lint && yarn lint:css",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "format": "prettier --write \"src/**/*.vue\" \"src/**/*.scss\""
   },
   "husky": {
     "hooks": {
@@ -45,35 +47,36 @@
     "focus-visible": "^5.2.0"
   },
   "devDependencies": {
-    "@rollup/plugin-beep": "^0.2.0",
-    "@rollup/plugin-node-resolve": "^13.3.0",
-    "@rollup/plugin-sucrase": "^4.0.4",
-    "@rollup/plugin-typescript": "^8.3.3",
-    "@typescript-eslint/eslint-plugin": "^5.29.0",
-    "@typescript-eslint/parser": "^5.29.0",
-    "@vitejs/plugin-vue": "^2.3.3",
-    "@vue/compiler-sfc": "^3.2.37",
-    "eslint": "^8.18.0",
-    "eslint-plugin-vue": "^9.1.1",
-    "husky": "^8.0.1",
-    "lint-staged": "^13.0.3",
-    "postcss": "^8.4.14",
-    "postcss-html": "^1.4.1",
-    "postcss-scss": "^4.0.4",
-    "rollup": "^2.75.7",
+    "@rollup/plugin-beep": "^1.0.2",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-sucrase": "^5.0.1",
+    "@rollup/plugin-typescript": "^11.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/parser": "^5.50.0",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/compiler-sfc": "^3.2.45",
+    "eslint": "^8.33.0",
+    "eslint-plugin-vue": "^9.9.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.0",
+    "postcss": "^8.4.21",
+    "postcss-html": "^1.5.0",
+    "postcss-scss": "^4.0.6",
+    "rollup": "^3.12.0",
     "rollup-plugin-buble": "^0.19.8",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-scss": "^3.0.0",
+    "rollup-plugin-scss": "^4.0.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-vue": "^6.0.0",
-    "sass": "^1.53.0",
-    "stylelint": "^14.9.1",
-    "stylelint-config-standard": "^26.0.0",
-    "tslib": "^2.4.0",
-    "typescript": "^4.7.4",
-    "vite": "^2.9.12",
-    "vue": "^3.2.37",
+    "sass": "^1.57.1",
+    "stylelint": "^14.16.1",
+    "stylelint-config-prettier": "^9.0.4",
+    "stylelint-config-standard": "^29.0.0",
+    "tslib": "^2.5.0",
+    "typescript": "^4.9.5",
+    "vite": "^4.0.4",
+    "vue": "^3.2.45",
     "vue-float-menu": "^1.9.1"
   },
   "peerDependencies": {
