--- a/.github/workflows/build-lint.yml
+++ b/.github/workflows/build-lint.yml
@@ -1,6 +1,10 @@
+name: CI
+
 on:
-  - push
-  - pull_request
+  push:
+    branches: [master]
+  pull_request:
+    branches: [master]
 
 jobs:
   cache-and-install:
