--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "lint:css": "stylelint src/**/*.scss --custom-syntax postcss-scss",
     "lint:all": "yarn lint && yarn lint:css",
     "prepare": "husky install",
-    "format": "prettier --write \"src/**/*.vue\" \"src/**/*.scss\""
+    "format": "prettier --write \"src/**/*.vue\" \"src/**/*.scss\"",
+    "clean": "pnpm format && pnpm lint:all"
   },
   "husky": {
     "hooks": {
@@ -48,9 +49,11 @@
   },
   "devDependencies": {
     "@rollup/plugin-beep": "^1.0.2",
+    "@rollup/plugin-buble": "^1.0.2",
+    "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-sucrase": "^5.0.1",
-    "@rollup/plugin-typescript": "^11.0.0",
+    "@rollup/plugin-terser": "^0.4.0",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
     "@vitejs/plugin-vue": "^4.0.0",
@@ -63,11 +66,8 @@
     "postcss-html": "^1.5.0",
     "postcss-scss": "^4.0.6",
     "rollup": "^3.12.0",
-    "rollup-plugin-buble": "^0.19.8",
-    "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-scss": "^4.0.0",
-    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-vue": "^6.0.0",
     "sass": "^1.57.1",
     "stylelint": "^14.16.1",
