--- a/.github/workflows/build-lint.yml
+++ b/.github/workflows/build-lint.yml
@@ -24,7 +24,7 @@ jobs:
         id: pnpm-install
         with:
           version: latest
-          run_install: true
+          run_install: false
 
       - name: Get pnpm store directory
         id: pnpm-cache
