--- a/.github/workflows/build-lint.yml
+++ b/.github/workflows/build-lint.yml
@@ -41,7 +41,7 @@ jobs:
       #       ${{ runner.os }}-pnpm-store-
 
       - name: Install dependencies
-        run: pnpm install
+        run: pnpm install --no-frozen-lockfile
 
       - name: Run lint
         run: pnpm lint
