--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "rollup": "rimraf ./dist && rollup -c",
     "lint": "eslint src/**/*.vue",
     "lint:css": "stylelint src/**/*.scss --custom-syntax postcss-scss",
-    "lint:all": "yarn lint && yarn lint:css",
+    "lint:all": "pnpm lint && pnpm lint:css",
     "prepare": "husky install",
     "format": "prettier --write \"src/**/*.vue\" \"src/**/*.scss\"",
     "clean": "pnpm format && pnpm lint:all"
@@ -50,34 +50,35 @@
   "devDependencies": {
     "@rollup/plugin-beep": "^1.0.2",
     "@rollup/plugin-buble": "^1.0.2",
-    "@rollup/plugin-commonjs": "^24.1.0",
-    "@rollup/plugin-node-resolve": "^15.0.2",
+    "@rollup/plugin-commonjs": "^25.0.3",
+    "@rollup/plugin-node-resolve": "^15.1.0",
     "@rollup/plugin-sucrase": "^5.0.1",
-    "@rollup/plugin-terser": "^0.4.1",
-    "@rollup/plugin-typescript": "^11.1.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
-    "@typescript-eslint/parser": "^5.59.2",
-    "@vitejs/plugin-vue": "^4.2.1",
-    "@vue/compiler-sfc": "^3.2.47",
-    "eslint": "^8.39.0",
-    "eslint-plugin-vue": "^9.11.0",
+    "@rollup/plugin-terser": "^0.4.3",
+    "@rollup/plugin-typescript": "^11.1.2",
+    "@typescript-eslint/eslint-plugin": "^6.1.0",
+    "@typescript-eslint/parser": "^6.1.0",
+    "@vitejs/plugin-vue": "^4.2.3",
+    "@vue/compiler-sfc": "^3.3.4",
+    "eslint": "^8.45.0",
+    "eslint-plugin-vue": "^9.15.1",
     "husky": "^8.0.3",
-    "lint-staged": "^13.2.2",
-    "postcss": "^8.4.23",
+    "lint-staged": "^13.2.3",
+    "postcss": "^8.4.26",
     "postcss-html": "^1.5.0",
     "postcss-scss": "^4.0.6",
-    "rollup": "^3.21.3",
+    "prettier": "^3.0.0",
+    "rollup": "^3.26.3",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-scss": "^4.0.0",
     "rollup-plugin-vue": "^6.0.0",
-    "sass": "^1.62.1",
-    "stylelint": "^15.6.1",
+    "sass": "^1.63.6",
+    "stylelint": "^15.10.2",
     "stylelint-config-prettier": "^9.0.5",
-    "stylelint-config-standard": "^33.0.0",
-    "tslib": "^2.5.0",
-    "typescript": "^5.0.4",
-    "vite": "^4.3.4",
-    "vue": "^3.2.47",
+    "stylelint-config-standard": "^34.0.0",
+    "tslib": "^2.6.0",
+    "typescript": "^5.1.6",
+    "vite": "^4.4.4",
+    "vue": "^3.3.4",
     "vue-float-menu": "^1.9.1"
   },
   "peerDependencies": {
