--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,11 @@
 {
+  "semi": true,
   "tabWidth": 2,
-  "useTabs": false
+  "printWidth": 100,
+  "singleQuote": true,
+  "trailingComma": "es5",
+  "bracketSpacing": true,
+  "vueIndentScriptAndStyle": false,
+  "useTabs": false,
+  "endOfLine": "lf"
 }
