--- a/package.json
+++ b/package.json
@@ -21,13 +21,21 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "rollup": "rimraf ./dist && rollup -c",
-    "lint": "eslint src/**/*.vue",
-    "lint:css": "stylelint src/**/*.scss --custom-syntax postcss-scss",
-    "lint:all": "pnpm lint && pnpm lint:css",
+    "build:lib": "vue-tsc --build tsconfig.build.json && vite build",
+    "rollup": "rm -rf ./dist && rollup -c",
+    "type-check": "vue-tsc --noEmit",
+    "type-check:watch": "vue-tsc --noEmit --watch",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "lint:js": "eslint --ext .js,.ts .",
+    "lint:js:fix": "eslint --ext .js,.ts . --fix",
+    "lint:css": "stylelint \"src/**/*.{vue,scss}\" --custom-syntax postcss-scss",
+    "lint:css:fix": "stylelint \"src/**/*.{vue,scss}\" --custom-syntax postcss-scss --fix",
+    "lint:all": "pnpm lint && pnpm lint:css && pnpm type-check",
+    "lint:fix:all": "pnpm lint:fix && pnpm lint:css:fix",
     "prepare": "husky install",
-    "format": "prettier --write \"src/**/*.vue\" \"src/**/*.scss\"",
-    "clean": "pnpm format && pnpm lint:all"
+    "format": "prettier --write \"src/**/*.vue\" \"src/**/*.scss\" \"src/**/*.ts\" \"src/**/*.js\"",
+    "clean": "pnpm format && pnpm lint:js:fix && pnpm lint:css:fix"
   },
   "husky": {
     "hooks": {
@@ -35,19 +43,28 @@
     }
   },
   "lint-staged": {
-    "src/**/*.scss": [
-      "npx stylelint src/**/*.scss --fix",
-      "git add"
+    "*.{js,ts}": [
+      "eslint --fix",
+      "prettier --write"
     ],
-    "src/**/*.vue": [
-      "eslint src/**/*.vue --fix",
-      "git add"
+    "*.vue": [
+      "eslint --fix",
+      "stylelint --custom-syntax postcss-html --fix",
+      "prettier --write"
+    ],
+    "*.scss": [
+      "stylelint --custom-syntax postcss-scss --fix",
+      "prettier --write"
     ]
   },
   "dependencies": {
     "focus-visible": "^5.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
+    "@eslint/js": "^9.27.0",
+    "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-beep": "^1.0.2",
     "@rollup/plugin-buble": "^1.0.2",
     "@rollup/plugin-commonjs": "^25.0.3",
@@ -55,14 +72,20 @@
     "@rollup/plugin-sucrase": "^5.0.1",
     "@rollup/plugin-terser": "^0.4.3",
     "@rollup/plugin-typescript": "^11.1.2",
-    "@typescript-eslint/eslint-plugin": "^6.1.0",
-    "@typescript-eslint/parser": "^6.1.0",
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
+    "@typescript-eslint/parser": "^8.32.1",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/compiler-sfc": "^3.3.4",
-    "eslint": "^8.45.0",
-    "eslint-plugin-vue": "^9.15.1",
+    "eslint": "^9.0.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-vue": "^10.1.0",
+    "eslint-plugin-vue-scoped-css": "^2.5.1",
+    "eslint-plugin-vuejs-accessibility": "^2.4.1",
     "husky": "^8.0.3",
-    "lint-staged": "^13.2.3",
+    "lint-staged": "^15.2.0",
     "postcss": "^8.4.26",
     "postcss-html": "^1.5.0",
     "postcss-scss": "^4.0.6",
@@ -76,10 +99,13 @@
     "stylelint-config-prettier": "^9.0.5",
     "stylelint-config-standard": "^34.0.0",
     "tslib": "^2.6.0",
-    "typescript": "^5.1.6",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.32.1",
     "vite": "^4.4.4",
     "vue": "^3.3.4",
-    "vue-float-menu": "^1.9.1"
+    "vue-eslint-parser": "^10.0.0",
+    "vue-float-menu": "^1.9.1",
+    "vue-tsc": "^2.2.10"
   },
   "peerDependencies": {
     "@vue/compiler-sfc": "^3.0.4",
