feat: Enhance accessibility and touch interactions in FloatMenu component
- Added aria attributes for better screen reader support.
- Implemented enhanced touch handling for long press and swipe gestures.
- Introduced haptic feedback for touch devices.
- Improved keyboard navigation with focus visibility and keyboard activation.
- Updated styles for better focus outlines and accessibility.
- Refactored menu toggle logic to improve performance and user experience.
- Added new accessibility styles in a dedicated SCSS file.
- Updated demo components to showcase new features and improved UI.
- Introduced a new TypeScript file for touch handlers to encapsulate touch logic.
- Updated TypeScript definitions for better type safety and clarity.

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -41,8 +41,11 @@
     "src/**/*.test.*",
     "src/**/*.spec.*",
     "src/**/*.stories.*",
+    "src/main.js",
     "node_modules",
     "dist",
-    "**/*.md"
+    "**/*.md",
+    "index.html",
+    "vite.config.js"
   ]
 }
