chore: modernize library build and tooling for 2025\n\n- Consolidate to Vite lib mode (ESM+CJS+UMD) with single CSS\n- Remove legacy Rollup/Babel config\n- Simplify type declarations via vue-tsc build config\n- Enable ESLint for SFCs (scoped to src/components)\n- Update exports map, peers, sideEffects, engines\n- Add CI (lint:js+build) and Changesets-based release workflow\n- Refresh dev deps to latest compatible versions

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,35 @@
 name: Release
+on:
+  push:
+    branches: [master, main]
+jobs:
+  release:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
+      id-token: write
+      packages: write
+    steps:
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 9
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: pnpm
+          registry-url: https://registry.npmjs.org
+      - run: pnpm install --frozen-lockfile
+      - run: pnpm build
+      - name: Create version PR or publish
+        uses: changesets/action@v1
+        with:
+          publish: pnpm publish --access public --no-git-checks
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+name: Release
 
 on:
   push:
