--- a/package.json
+++ b/package.json
@@ -20,10 +20,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "build:lib": "pnpm build:rollup",
-    "rollup": "rm -rf ./dist && rollup -c rollup.config.js",
-    "build:rollup": "rm -rf ./dist && rollup -c rollup.config.js",
+    "build": "rm -rf dist && vite build && vue-tsc --build tsconfig.build.json --emitDeclarationOnly",
     "build:types": "vue-tsc --build tsconfig.build.json --emitDeclarationOnly",
     "type-check": "vue-tsc --noEmit",
     "type-check:watch": "vue-tsc --noEmit --watch",
@@ -38,11 +35,6 @@
     "prepare": "husky install",
     "format": "prettier --write \"src/**/*.vue\" \"src/**/*.scss\" \"src/**/*.ts\" \"src/**/*.js\"",
     "clean": "pnpm format && pnpm lint:js:fix && pnpm lint:css:fix"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   },
   "lint-staged": {
     "*.{js,ts}": [
@@ -60,74 +52,73 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.27.1",
-    "@babel/preset-typescript": "^7.27.1",
-    "@eslint/js": "^9.27.0",
-    "@rollup/plugin-babel": "^6.0.4",
-    "@rollup/plugin-beep": "^1.0.3",
-    "@rollup/plugin-buble": "^1.0.3",
-    "@rollup/plugin-commonjs": "^28.0.3",
-    "@rollup/plugin-node-resolve": "^16.0.1",
-    "@rollup/plugin-sucrase": "^5.0.2",
-    "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/plugin-typescript": "^12.1.2",
-    "@types/node": "^22.15.21",
-    "@typescript-eslint/eslint-plugin": "^8.32.1",
-    "@typescript-eslint/parser": "^8.32.1",
-    "@vitejs/plugin-vue": "^5.2.4",
-    "@vue/compiler-sfc": "^3.5.14",
-    "eslint": "^9.27.0",
-    "eslint-config-prettier": "^10.1.5",
-    "eslint-import-resolver-typescript": "^4.4.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prettier": "^5.4.0",
-    "eslint-plugin-vue": "^10.1.0",
-    "eslint-plugin-vue-scoped-css": "^2.10.0",
+    "@changesets/cli": "^2.27.9",
+    "@eslint/js": "^9.33.0",
+    "@types/node": "^24.2.1",
+    "@typescript-eslint/eslint-plugin": "^8.39.0",
+    "@typescript-eslint/parser": "^8.39.0",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "@vue/compiler-sfc": "^3.5.18",
+    "eslint": "^9.33.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-vue": "^10.4.0",
+    "eslint-plugin-vue-scoped-css": "^2.11.0",
     "eslint-plugin-vuejs-accessibility": "^2.4.1",
     "husky": "^9.1.7",
-    "lint-staged": "^16.0.0",
-    "postcss": "^8.5.3",
+    "lint-staged": "^16.1.5",
+    "postcss": "^8.5.6",
     "postcss-html": "^1.8.0",
     "postcss-scss": "^4.0.9",
-    "prettier": "^3.5.3",
-    "rollup": "^4.41.1",
-    "rollup-plugin-esbuild": "^6.2.1",
-    "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-scss": "^4.0.1",
-    "rollup-plugin-vue": "^6.0.0",
-    "sass": "^1.89.0",
-    "stylelint": "^16.19.1",
+    "prettier": "^3.6.2",
+    "sass": "^1.90.0",
+    "stylelint": "^16.23.1",
     "stylelint-config-prettier": "^9.0.5",
-    "stylelint-config-recommended-vue": "^1.6.0",
-    "stylelint-config-standard": "^38.0.0",
+    "stylelint-config-recommended-vue": "^1.6.1",
+    "stylelint-config-standard": "^39.0.0",
     "stylelint-config-standard-scss": "^15.0.1",
-    "stylelint-scss": "^6.12.0",
+    "stylelint-scss": "^6.12.1",
     "tslib": "^2.8.1",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.32.1",
-    "vite": "^6.3.5",
-    "vue": "^3.5.14",
-    "vue-eslint-parser": "^10.1.3",
-    "vue-float-menu": "^1.9.1",
-    "vue-tsc": "^2.2.10"
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.39.0",
+    "vite": "^7.1.1",
+    "vue": "^3.5.18",
+    "vue-eslint-parser": "^10.2.0",
+    "vue-tsc": "^3.0.5"
   },
   "peerDependencies": {
-    "@vue/compiler-sfc": "^3.0.4",
-    "vue": "^3.0.4"
+    "vue": "^3.3.0 || ^4.0.0-0"
   },
   "main": "dist/vue-float-menu.cjs",
   "module": "dist/vue-float-menu.js",
-  "umd": "dist/vue-float-menu.umd.js",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/vue-float-menu.js",
       "require": "./dist/vue-float-menu.cjs",
-      "types": "./dist/index.d.ts"
+      "default": "./dist/vue-float-menu.js"
     },
     "./style.css": "./dist/vue-float-menu.css"
   },
   "files": [
     "dist"
-  ]
+  ],
+  "unpkg": "dist/vue-float-menu.umd.js",
+  "jsdelivr": "dist/vue-float-menu.umd.js",
+  "sideEffects": [
+    "**/*.css",
+    "**/*.scss"
+  ],
+  "engines": {
+    "node": ">=18.18.0",
+    "pnpm": ">=9"
+  },
+  "publishConfig": {
+    "access": "public",
+    "provenance": true
+  },
+  "packageManager": "pnpm@9.0.0"
 }
