ci: modernize GitHub Actions (concurrency, permissions, matrix, caching, dispatch)\n\n- Update CI to matrix Node 18/20/22, add concurrency and least-privilege permissions\n- Add workflow_dispatch and paths-ignore, type-check step\n- Modernize Release workflow, add dispatch input, concurrency\n- Add Dependabot config for npm and GitHub Actions

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,6 +4,24 @@ updates:
     directory: '/'
     schedule:
       interval: 'weekly'
+    open-pull-requests-limit: 10
+    commit-message:
+      prefix: 'deps'
+      include: 'scope'
+  - package-ecosystem: 'github-actions'
+    directory: '/'
+    schedule:
+      interval: 'weekly'
+    open-pull-requests-limit: 10
+    commit-message:
+      prefix: 'ci'
+      include: 'scope'
+version: 2
+updates:
+  - package-ecosystem: 'npm'
+    directory: '/'
+    schedule:
+      interval: 'weekly'
       day: 'monday'
       time: '02:00'
     open-pull-requests-limit: 10
