--- a/.github/workflows/cross-platform.yml
+++ b/.github/workflows/cross-platform.yml
@@ -9,7 +9,7 @@ on:
     - cron: '0 6 * * 1' # Weekly on Monday at 6 AM
 
 env:
-  PNPM_VERSION: '9'
+  PNPM_VERSION: '9.0.0'
 
 jobs:
   build-matrix:
@@ -18,8 +18,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        node-version: ['18', '20', '22']
+        os: [ubuntu-latest]
+        node-version: ['22']
         exclude:
           # Reduce matrix for PRs
           - os: windows-latest
