ci: update Node.js version matrix to only include Node 22

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: [18, 20, 22]
+        node-version: [22]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
